Met à jour 3 aides (#4501)
* Màj l'aide aux transports pour les étudiants de la région Hauts de France.

* Màj l'aide aux transports pour les salariés et les apprentis de la région Hauts de France.

* Cache l'aide region_auvergne_rhone_alpes-financement-de-formations-dans-le-secteur-de-la-santé car ce dispositif n'existe plus. Il faisait doublon avec region_auvergne_rhone_alpes-bourse-du-secteur-santé-social.

* Update data/benefits/javascript/haut-de-france-aide-transports-salaries.yml

Co-authored-by: Jérémy PASTOURET <pastouret.jeremy@gmail.com>

* Update data/benefits/javascript/hauts-de-france-transport-etudiants.yml

Co-authored-by: Jérémy PASTOURET <pastouret.jeremy@gmail.com>

* Update haut-de-france-aide-transports-salaries.yml

* Améliore le texte de la description de l'aide transport pour les étudiants des Hauts de France.

* indentation description aide transports salariés hauts de france.

---------

Co-authored-by: Jérémy PASTOURET <pastouret.jeremy@gmail.com>

--- a/data/benefits/javascript/haut-de-france-aide-transports-salaries.yml
+++ b/data/benefits/javascript/haut-de-france-aide-transports-salaries.yml
@@ -1,14 +1,19 @@
-label: aide au Transport aux Particuliers - Salariés ou salariées
+label: aide au transport aux particuliers - salariés et apprentis
 institution: hauts_de_france
 description: Cette aide permet la prise en charge d'une partie des frais liés au
-  trajet domicile-travail pour les salariés et salariées qui utilisent leur véhicule pour
-  aller travailler.
+  trajet domicile-travail pour les salariés et les apprentis qui utilisent leur véhicule pour
+  aller travailler. Si vous avez déjà bénéficié de cette aide, vous pouvez <a
+  target="_blank" title="Renouvellement aide aux transports aux particuliers 2024 - Nouvelle fenêtre" rel="noopener"
+  href="https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=ATPSR24">demander son renouvellement ici
+  </a>.
 conditions:
   - Utiliser un véhicule particulier ou un deux-roues motorisé pour la majorité
     de vos déplacements quotidiens domicile - travail.
-  - Etre salarié ou salariée en CDI ou en CDD d'au moins un mois.
+  - Etre salarié ou salariée en CDI ou en CDD d'au moins un mois, ou être apprenti ou apprentie.
   - Avoir une distance routière entre le domicile et le lieu de travail
-    supérieure ou égale à 20 kilomètres (1 trajet).
+    supérieure ou égale à 20 kilomètres (le seuil est ramené à 10 kilomètres si
+    vous faites la preuve d’une inscription sur une plateforme de co-voiturage
+    et à 1 kilomètre si vous êtes en situation de handicap).
   - Percevoir un salaire net inférieur ou égal à 2 fois le SMIC.
 conditions_generales:
   - type: regions
@@ -19,9 +24,7 @@ profils:
     conditions: []
   - type: apprenti
     conditions: []
-link: https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=458
-teleservice: https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=ATPS23
-instructions: https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=458
+link: https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=ATPS24
 prefix: l’
 type: float
 unit: €
