--- a/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-tarification-solidaire-bus.yml
+++ b/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-tarification-solidaire-bus.yml
@@ -3,8 +3,8 @@ institution: intercommunalite_golfe_du_morbihan_vannes_agglomeration
 description: Vannes Agglomération propose sous certaines conditions une
   tarification solidaire sur son réseau de bus. Ce dispositif vise à faciliter
   l'accès aux transports pour les personnes en situation de précarité en
-  proposant un abonnement mensuel au tarif de 5€ à 20€ par mois au lieu de 36€.
-  Cette aide fait l'objet d'une étude individualisée par la CCAS de votre
+  proposant un abonnement mensuel au tarif allant de 5 € à 20 € par mois au lieu de 36 €.
+  Cette aide fait l'objet d'une étude individualisée par le CCAS de votre
   commune.
 prefix: la
 conditions_generales:
