--- a/data/benefits/openfisca/aide_logement.yml
+++ b/data/benefits/openfisca/aide_logement.yml
@@ -2,12 +2,15 @@ label: aides au logement
 periodicite: mensuelle
 unit: €
 type: float
-description: "Les aides au logement regroupent trois aides différentes non cumulables\_: l’aide personnalisée au logement (APL), l’allocation de logement familiale (ALF) et l’allocation de logement sociale (ALS). Elles concernent les personnes ayant de faibles ressources, locataires ou remboursant le prêt de leur résidence principale. Elles sont versées par la Caf ou la MSA."
+description:
+  'Les aides au logement regroupent trois aides différentes non cumulables:
+  lʼaide personnalisée au logement (APL), lʼallocation de logement familiale (ALF) et lʼallocation de logement sociale (ALS). Elles concernent les personnes
+  ayant de faibles ressources, locataires ou remboursant le prêt de leur résidence principale. Elles sont versées par la Caf ou la MSA. Regarder <a
+  target="_blank" rel="noopener"
+  href="https://www.dailymotion.com/video/x902i16"
+  title="Tutoriel vidéo de demande dʼAPL  - Nouvelle fenêtre">le tutoriel vidéo de demande dʼAPL
+  </a>.'
 conditions:
-  - Regarder <a target="_blank" rel="noopener"
-    href="https://www.dailymotion.com/video/x902i16"
-    title="Tutoriel vidéo de demande d'APL  - Nouvelle fenêtre"
-    le tutoriel vidéo de demande d'APL</a>.
   - Résider au moins 8 mois par an dans le logement que vous avez décrit.
   - >-
     Le logement doit être <a target="_blank" rel="noopener"
