--- a/data/benefits/javascript/caf-creuse-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-creuse-aide-bafa-generale.yml
@@ -30,5 +30,5 @@ unit: €
 periodicite: ponctuelle
 legend: maximum
 montant: 300
-link: https://www.caf.fr/allocataires/caf-de-la-creuse/offre-de-service/vie-professionnelle/je-souhaite-passer-le-bafa
-instructions: https://www.caf.fr/allocataires/caf-de-la-creuse/offre-de-service/vie-professionnelle/je-souhaite-passer-le-bafa
+link: https://www.caf.fr/allocataires/caf-de-la-creuse/offre-de-service/vie-professionnelle/je-recherche-une-aide-pour-passer-mon-bafa#LaidelocaleCoupdepoucepourlaformationgnrale
+instructions: https://www.caf.fr/allocataires/caf-de-la-creuse/offre-de-service/vie-professionnelle/je-recherche-une-aide-pour-passer-mon-bafa#LaidelocaleCoupdepoucepourlaformationgnrale
