--- a/data/benefits/javascript/martinique-pret-etudiant-taux-zero.yml
+++ b/data/benefits/javascript/martinique-pret-etudiant-taux-zero.yml
@@ -1,11 +1,9 @@
-label: Prêt d'études remboursable sans intérêt
+label: Prêt d'études remboursable sans intérêt (PER)
 institution: martinique
 description:
-  Le Prêt d'études remboursable sans intérêt (PER) est accordé par la Collectivité
-  de Martinique, en fonction des ressources du foyer, à des étudiants inscrits
-  dans un cursus post Bac jusqu'au Master. Sont pris en compte le revenu imposable
-  à l’impôt sur le revenu et le nombre de parts fiscales figurant sur l’avis d’imposition
-  des parents ou de l’étudiant s’il a fait sa propre déclaration d'impôts."
+  Le Prêt d'études remboursable sans intérêt (PER) est accordé par la Collectivité Territoriale
+  de Martinique, en fonction des ressources du foyer, à des étudiants et étudiantes inscrits
+  dans un cursus post Bac jusqu'au Master.
 conditions:
   - Être de nationalité française ou ressortissant de l’un des États membres de
     l’Union Européenne.
@@ -16,6 +14,10 @@ conditions:
     suivant l'obtention du diplôme préparé ou la fin des études.
   - Avoir remboursé intégralement la dette au plus tard six ans après la date de
     début du paiement de la créance.
+  - Télécharger <a
+    target="_blank" title="Formulaire de cautionnement solidaire - Nouvelle fenêtre" rel="noopener"
+    href="https://www.spot.mq/sites/default/files/Documents/SPOT_FORMULAIRE%20CAUTIONNEMENT.pdf">le formulaire de cautionnement solidaire (PDF - 697ko).
+    </a>.
 prefix: le
 conditions_generales:
   - type: regions
@@ -28,9 +30,9 @@ conditions_generales:
 profils:
   - type: enseignement_superieur
     conditions: []
-link: https://www.spot.mq/zoom-sur/lancement-de-la-campagne-2023-2024-15-juillet-2023
-instructions: https://www.spot.mq/sites/default/files/Documents/REGLEMENT_AidesEtudiantsEleves_extrait.pdf#page=8
-teleservice: https://www.demarches-simplifiees.fr/commencer/ctm-demande-per-2023-2024
+link: https://www.spot.mq/zoom-sur/lancement-de-la-campagne-2024-2025-26-juillet-2024
+instructions: https://www.spot.mq/trouver-un-dispositif/pret-detudes-remboursable-sans-interet-per
+teleservice: https://ct-martinique-production.mgcloud.fr/account-management/ctmartinique-demandeurs/ux/#/login
 type: float
 unit: €
 montant: 3500
