--- a/data/benefits/openfisca/aide_logement.yml
+++ b/data/benefits/openfisca/aide_logement.yml
@@ -8,7 +8,7 @@ description:
   ayant de faibles ressources, locataires ou remboursant le prêt de leur résidence principale. Elles sont versées par la Caf ou la MSA. Regarder <a
   target="_blank" rel="noopener"
   href="https://www.dailymotion.com/video/x902i16"
-  title="Tutoriel vidéo de demande dʼAPL (Dailymotion) - Nouvelle fenêtre">le tutoriel vidéo de demande dʼAPL (Dailymotion)
+  title="Tutoriel vidéo de demande dʼAPL - Nouvelle fenêtre">le tutoriel vidéo de demande dʼAPL (Dailymotion)
   </a>.'
 conditions:
   - Résider au moins 8 mois par an dans le logement que vous avez décrit.
