--- a/data/benefits/openfisca/aide_logement.yml
+++ b/data/benefits/openfisca/aide_logement.yml
@@ -2,13 +2,12 @@ label: aides au logement
 periodicite: mensuelle
 unit: €
 type: float
-description:
-  'Les aides au logement regroupent trois aides différentes non cumulables :
+description: 'Les aides au logement regroupent trois aides non cumulables :
   lʼaide personnalisée au logement (APL), lʼallocation de logement familiale (ALF) et lʼallocation de logement sociale (ALS). Elles concernent les personnes
   ayant de faibles ressources, locataires ou remboursant le prêt de leur résidence principale. Elles sont versées par la Caf ou la MSA. Regarder <a
   target="_blank" rel="noopener"
   href="https://www.dailymotion.com/video/x902i16"
-  title="Tutoriel vidéo de demande dʼAPL - Nouvelle fenêtre">le tutoriel vidéo de demande dʼAPL (Dailymotion)
+  title="Tutoriel vidéo de demande dʼAPL (Dailymotion) - Nouvelle fenêtre">le tutoriel vidéo de demande dʼAPL (Dailymotion)
   </a>.'
 conditions:
   - Résider au moins 8 mois par an dans le logement que vous avez décrit.
