--- a/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-aide-a-lhabillement.yml
+++ b/data/benefits/javascript/intercommunalite_golfe_du_morbihan_vannes_agglomeration-aide-a-lhabillement.yml
@@ -1,26 +1,24 @@
 label: Aide à l'habillement
-institution: intercommunalite_golfe_du_morbihan_vannes_agglomeration
+institution: ville-de-vannes
 description: L'aide à l'habillement est destinée aux familles monoparentales
-  vannetaises ayant un QF ville de Vannes F/ G ou H. Cette aide est remise sous
-  forme de bons d'achats à faire valoir dans les deux magasins Partage de la
-  Ville de Vannes.
+  vannetaises aux revenus modestes (correspondant à un quotient familial F, G
+  ou H calculé par la ville de Vannes). Cette aide est remise sous forme de deux
+  bons d'achat par an, à faire valoir dans les deux magasins Partage de la
+  ville de Vannes.
 prefix: l’
 conditions_generales:
   - type: communes
     values:
       - "56260"
-voluntary_conditions: []
 profils:
   - type: parent
     conditions: []
 conditions:
-  - "Prendre rendez-vous auprès du service action sociale et insertion du CCAS
-    de Vannes au 02.91.01.65.25 ou par mail à : actionsociale@mairie-vannes.fr
-    ."
-type: bool
-unit: null
+  - 'Prendre rendez-vous auprès du service action sociale et insertion du CCAS
+    de Vannes par téléphone au <a href="tel:+33297016525">02 97 01 65 25</a>
+    ou par email à <a href="mailto:actionsociale@mairie-vannes.fr">actionsociale@mairie-vannes.fr</a>.'
+type: float
+unit: €
 periodicite: annuelle
 montant: 50
 link: https://www.mairie-vannes.fr/action-sociale-et-insertion
-teleservice: ""
-instructions: https://www.mairie-vannes.fr/action-sociale-et-insertion
