Passe l'aide à la mobilité internationale pour un projet de création d'entreprise de la région AURA en private.

--- a/data/benefits/javascript/region_auvergne_rhone_alpes-bourse-mobilite-internationale-creation-dentreprise.yml
+++ b/data/benefits/javascript/region_auvergne_rhone_alpes-bourse-mobilite-internationale-creation-dentreprise.yml
@@ -22,3 +22,4 @@ periodicite: autre
 montant: 1500
 link: https://www.auvergnerhonealpes.fr/aides/obtenir-une-bourse-de-mobilite-internationale-pour-mon-projet-de-creation-dentreprise
 instructions: https://www.auvergnerhonealpes.fr/aides/obtenir-une-bourse-de-mobilite-internationale-pour-mon-projet-de-creation-dentreprise
+private: true
