--- a/data/benefits/openfisca/hauts_de_france_aide_garde_enfant.yml
+++ b/data/benefits/openfisca/hauts_de_france_aide_garde_enfant.yml
@@ -1,15 +1,15 @@
 label: Aide à la garde d'enfants
 institution: hauts_de_france
 description: Cette aide permet de faciliter l'accès aux services de garde
-  d'enfants pour le(s) parent(s) aux revenus modestes.
+  d'enfants pour le(s) parent(s) aux revenus modestes. Les demandes sont ouvertes
+  chaque année entre septembre et juillet.
 conditions:
   - Être parent(s) d'un enfant de moins de 3 ans et domicilié(s) en région
     Hauts-de-France.
   - Recourir à un mode de garde déclaré.
   - Recourir à une garde d'au moins 20 heures par semaine.
-link: https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=636
-teleservice: https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=AGE%2009%2F21
-instructions: https://guide-aides.hautsdefrance.fr/spip.php?page=dispositif&id_dispositif=636
+link: https://aides.hautsdefrance.fr/sub/tiers/aides/details/?sigle=AGE%2009%2F24
+teleservice: https://aides.hautsdefrance.fr/sub/tiers/authentification
 prefix: l’
 type: float
 unit: €
