Ajoute le tutoriel vidéo sur la demande de logement en résidence Crous. (#4528)
* Ajoute le tutoriel vidéo sur la demande de logement en résidence Crous.

* Saut de ligne.

* Saut de ligne sur l'aide au logement.

--- a/data/benefits/openfisca/crous_logement_eligibilite.yml
+++ b/data/benefits/openfisca/crous_logement_eligibilite.yml
@@ -1,10 +1,17 @@
-label: logement dans une résidence CROUS
+label: logement dans une résidence universitaire du CROUS
 institution: etat
-description: Les logements gérés par le Crous sont destinés aux étudiants dont les familles disposent de faibles ressources. Plusieurs types de logement peuvent être proposés en fonction des résidences.
+description:
+  Les logements gérés par le Crous sont destinés aux étudiants dont les familles disposent de faibles ressources. Plusieurs types de logement peuvent être proposés en fonction des résidences. Regarder <a
+  target="_blank" rel="noopener"
+  href="https://www.dailymotion.com/video/x902iva"
+  title="Tutoriel vidéo de demande de logement Crous (Dailymotion) - Nouvelle fenêtre">le tutoriel vidéo de demande de logement Crous (Dailymotion)
+  </a>.
+  <br/>
 conditions:
   - Avoir rempli votre Dossier social étudiant (DSE) <strong>avant le 15 mai</strong> et avoir coché la case « Je demande un logement ».
 link: https://www.etudiant.gouv.fr/fr/bourse-et-logement-constituez-votre-dossier-social-etudiant-dse-409#item4
 teleservice: https://trouverunlogement.lescrous.fr
+instructions: https://www.dailymotion.com/video/x902iva
 prefix: un
 type: bool
 entity: individus
