remplace jpg par png.

--- a/data/institutions/cc_de_la_champagne_picarde.yml
+++ b/data/institutions/cc_de_la_champagne_picarde.yml
@@ -1,5 +1,5 @@
 name: Communauté de communes de la Champagne Picarde
-imgSrc: img/institutions/logo_cc_de_la_champagne_picarde.jpg
+imgSrc: img/institutions/logo_cc_de_la_champagne_picarde.png
 prefix: de la
 type: epci
 code_siren: "240200576"
