--- a/data/institutions/cc_le_grand_charolais.yml
+++ b/data/institutions/cc_le_grand_charolais.yml
@@ -1,5 +1,5 @@
 name: Communauté de communes Le Grand Charolais
-imgSrc: img/institutions/logo_cc_le_grand_charolais.jpg
+imgSrc: img/institutions/logo_cc_le_grand_charolais.png
 prefix: de la
 type: epci
 code_siren: "200071884"
