Ajoute l'incitation covoiturage du PETR Bruche Mossig.

--- a/data/benefits/javascript/smbpa-pays-basque-adour-aide-covoiturage.yml
+++ b/data/benefits/javascript/smbpa-pays-basque-adour-aide-covoiturage.yml
@@ -178,4 +178,4 @@ conditions:
 type: bool
 periodicite: autre
 link: https://www.communaute-paysbasque.fr/a-la-une-2/actualites/actualite/covoiturage-au-pays-basque-les-conducteurs-indemnises
-teleservice: https://www.communaute-paysbasque.fr/a-la-une-2/actualites/actualite/covoiturage-au-pays-basque-les-conducteurs-indemnises
+instructions: https://www.communaute-paysbasque.fr/a-la-une-2/actualites/actualite/covoiturage-au-pays-basque-les-conducteurs-indemnises
