Modifie 2 fichiers d'institutions - Montbéliard et Fécamp) et améliore le script de l'aide pour éviter la formulation suivante (Vous êtes indemnisé 2 € par trajet et par passager selon la distance parcourue.) sur l'incitation d'Agen.

--- a/data/institutions/ca_fecamp_caux_littoral.yml
+++ b/data/institutions/ca_fecamp_caux_littoral.yml
@@ -1,4 +1,4 @@
-name: Communauté d'agglomération Fécamp Caux Littoral Agglomération
+name: Communauté d'agglomération Fécamp Caux Littoral
 imgSrc: img/institutions/logo_ca_fecamp_caux_littoral_agglomeration.png
 prefix: de la
 type: epci
