--- a/data/institutions/intercommunalite_pays_de_montbeliard_agglomeration.yml
+++ b/data/institutions/intercommunalite_pays_de_montbeliard_agglomeration.yml
@@ -1,4 +1,5 @@
 name: Pays de Montbéliard Agglomération
 imgSrc: img/institutions/logo_pays_de_montbeliard.png
 type: epci
+prefix: du
 code_siren: "200065647"
