Modifie 3 fichiers d'institutions : Cotentin, Grand Avignon et Grand Poitiers

--- a/data/institutions/intercommunalite_grand_avignon.yml
+++ b/data/institutions/intercommunalite_grand_avignon.yml
@@ -1,5 +1,5 @@
-name: Grand Avignon
+name: Agglomération du Grand Avignon
 imgSrc: img/institutions/logo_intercommunalite_grand_avignon.png
-prefix: du
+prefix: de l'
 type: epci
 code_siren: "248400251"
