--- a/data/institutions/cu_grand_poitiers.yml
+++ b/data/institutions/cu_grand_poitiers.yml
@@ -1,4 +1,5 @@
 name: Communauté urbaine du Grand Poitiers
 imgSrc: img/institutions/logo_epci_poitiers.png
+prefix: de la
 type: epci
 code_siren: "200069854"
