--- a/data/institutions/intercommunalite_cap_cotentin.yml
+++ b/data/institutions/intercommunalite_cap_cotentin.yml
@@ -1,4 +1,5 @@
-name: Cap Cotentin
-imgSrc: img/institutions/logo_intercommunalite_cap_cotentin.png
+name: Communauté d'agglomération du Cotentin
+imgSrc: img/institutions/logo_ca_cotentin.png
+prefix: de la
 type: epci
 code_siren: "200067205"
