Modifie 4 fichiers d'institutions : Saint-Louis, métropole d'Angers, Pays de Laon et Pays des Herbiers.

--- a/data/institutions/ca_saint_louis_agglomeration.yml
+++ b/data/institutions/ca_saint_louis_agglomeration.yml
@@ -1,4 +1,4 @@
-name: Communauté d'agglomération Saint-Louis Agglomération
+name: Communauté d'agglomération de Saint-Louis
 imgSrc: img/institutions/logo_ca_saint_louis_agglomeration.png
 prefix: de la
 type: epci
