--- a/data/institutions/intercommunalite_pays_des_herbiers.yml
+++ b/data/institutions/intercommunalite_pays_des_herbiers.yml
@@ -1,5 +1,5 @@
-name: Pays des Herbiers
+name: Communauté de communes du Pays des Herbiers
 imgSrc: img/institutions/logo_pays_des_herbiers.png
-prefix: du
+prefix: de la
 type: epci
 code_siren: "248500621"
