--- a/data/institutions/intercommunalite_angers_loire.yml
+++ b/data/institutions/intercommunalite_angers_loire.yml
@@ -1,4 +1,5 @@
 name: Angers Loire Métropole
 imgSrc: img/institutions/logo_intercommunalite_angers_loire.png
+prefix: d'
 type: epci
 code_siren: "244900015"
