--- a/data/institutions/intercommunalite_pays_de_laon.yml
+++ b/data/institutions/intercommunalite_pays_de_laon.yml
@@ -1,4 +1,5 @@
-name: Pays de Laon
+name: Communauté d'agglomération du Pays de Laon
 imgSrc: img/institutions/logo_pays_de_laon.png
+prefix: de la
 type: epci
 code_siren: "200043495"
