Précise que le dépôt des demandes est possible uniquement en cours d'année scolaire, d'octobre à juin.

--- a/data/benefits/javascript/bretagne-jeune-international.yml
+++ b/data/benefits/javascript/bretagne-jeune-international.yml
@@ -6,6 +6,7 @@ description:
 conditions:
   - Ne pas être bénéficiaire d'une autre aide publique à la mobilité
     internationale (européenne, nationale, régionale, départementale, locale).
+  - Effectuer votre demande de bourse en cours d'année scolaire (plateforme de dépôt des demandes ouverte d'octobre à juin).
 conditions_generales:
   - type: regions
     values:
