--- a/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-bts-dut.yml
@@ -6,6 +6,7 @@ description:
 conditions:
   - Être étudiant ou étudiante en BTS ou 1ère ou 2ème année de BUT.
   - Contacter au préalable votre établissement qui vous indiquera la marche à suivre.
+  - Effectuer votre demande de bourse en cours d'année scolaire (plateforme de dépôt des demandes ouverte d'octobre à juin).
 conditions_generales:
   - type: regions
     values:
