--- a/data/benefits/javascript/region-bretagne-bourse-international-formation-sanitaires-sociales.yml
+++ b/data/benefits/javascript/region-bretagne-bourse-international-formation-sanitaires-sociales.yml
@@ -7,6 +7,7 @@ conditions:
   - Être étudiant ou étudiante dans le secteur sanitaire et social.
   - Contacter au préalable votre établissement qui vous indiquera la marche à
     suivre.
+  - Effectuer votre demande de bourse en cours d'année scolaire (plateforme de dépôt des demandes ouverte d'octobre à juin).
 conditions_generales:
   - type: regions
     values:
