--- a/data/benefits/javascript/region-pays-de-la-loire-aide-covoiturage.yml
+++ b/data/benefits/javascript/region-pays-de-la-loire-aide-covoiturage.yml
@@ -3,7 +3,7 @@ institution: region_pays_de_la_loire
 description:
   "La région Pays de la Loire subventionne tous vos covoiturages domicile-travail.<br />
   Vous êtes conductrice ou conducteur ? Recevez entre 0,75€ et 2 € par trajet et par passager selon la distance parcourue dans la limite de 84 € de gain par mois.<br />
-  Vous êtes passagère ou passager ? Vous ne payez que 0,50 € par trajet et bénéficiez en plus de 2 trajets gratuits par jour si vous avez un abonnement Pass Navigo ou Imagine R."
+  Vous êtes passagère ou passager ? Vous ne payez que 0,50 € par trajet."
 prefix: l’
 conditions_generales:
   - type: regions
