--- a/data/benefits/openfisca/seine_saint_denis_cheque_reussite.yml
+++ b/data/benefits/openfisca/seine_saint_denis_cheque_reussite.yml
@@ -10,7 +10,7 @@ conditions:
   - 'Rendez-vous <a target="_blank" rel="noopener" title="Plateforme du Chèque réussite - Nouvelle fenêtre" href="https://chequereussite.seinesaintdenis.fr/my/dashboard">sur la Plateforme du Chèque réussite</a> ou utiliser l’application mobile Chèque réussite Seine-St-Denis téléchargeable sur les stores
     <a target="_blank" rel="noopener" title="Télécharger l’application mobile Chèque réussite Seine-St-Denis sur Android - Nouvelle fenêtre" href=" https://play.google.com/store/apps/details?id=fr.memberz.m.OtrSsdCheque&pli=1">Android</a> et
     <a target="_blank" rel="noopener" title="Télécharger l’application mobile Chèque réussite Seine-St-Denis sur iOS - Nouvelle fenêtre" href=" https://apps.apple.com/app/ch%C3%A8que-r%C3%A9ussite-seine-st-denis/id6503948379">iOS</a>.'
-  - Créer un compte parents puis faire la demande pour l’enfant concerné.
+  - Créer un compte parents (ou tuteur légal de l’enfant) puis faire la demande pour l’enfant concerné.
   - Faire la demande <strong>entre juin et novembre</strong>.
   - Utiliser le chèque réussite dans les commerces partenaires <strong>avant la fin de l’année scolaire (juin)</strong>.
 link: https://seinesaintdenis.fr/enfance-education-jeunesse/education/aides-a-la-scolarite/chequereussite
