Le bénévolat est à effectuer au sein des services municipaux pour cette première année.

--- a/data/benefits/javascript/ville-berre-l-etang-revenu-minimum-etudiant.yml
+++ b/data/benefits/javascript/ville-berre-l-etang-revenu-minimum-etudiant.yml
@@ -27,8 +27,7 @@ conditions:
     href="https://www.berreletang.fr/espacefamille">Espace famille en ligne</a>, ou par email adressé à <a
     href="mailto:guichet.unique@berre-l-etang.fr">guichet.unique@berre-l-etang.fr</a>, ou à l’accueil du Guichet Unique de la mairie de Berre l’Étang, en accès libre ou <a target="_blank" rel="noopener" title="Prendre rendez-vous avec le Guichet Unique de la mairie de Berre l’Etang - Nouvelle fenêtre"
     href="https://formulaires.demarches.berreletang.fr/famille/rdv-famille/">sur rendez-vous</a> - Place du Souvenir Français, entrée Marthoméla - Ouvert du lundi au vendredi de 8h30 à 12h30 et de 13h30 à 17h.'
-voluntary_conditions:
-  - Effectuer 3 journées de missions citoyennes bénévoles au sein des services de la ville ou d’une structure associative.
+  - Effectuer 3 journées de missions citoyennes bénévoles au sein des services de la ville.
 link: https://www.berreletang.fr/aides-pour-les-jeunes
 form: https://www.berreletang.fr/IMG/pdf/formulaire_inscription_rme.pdf
 instructions: https://www.berreletang.fr/IMG/pdf/berre_reglement-rme.pdf
