--- a/data/benefits/openfisca/pass_sport.yml
+++ b/data/benefits/openfisca/pass_sport.yml
@@ -1,18 +1,19 @@
 label: Pass’Sport
 institution: etat
 description:
-  Le pass Sport est une aide de 50 euros qui permet de financer une partie
+  Le pass’Sport est une aide de 50 euros qui permet de financer une partie
   de votre inscription sportive. Il est valable dans plus de <a
   target="_blank" title="Trouver un club - Nouvelle fenêtre"
   rel="noopener"
   href="https://pass.sports.gouv.fr/v2/trouver-un-club">85 000 clubs et salles de sport partenaires</a>.
-  C'est une aide individuelle et à usage unique, cumulable avec les autres aides mises en place notamment par les collectivités.
+  Plusieurs membres d’un même foyer peuvent en bénéficier car il s’agit d’une aide individuelle à usage unique
+  et cumulable avec d’autres aides, notamment celles mises en place par les collectivités locales.
 conditions:
   - Vérifier votre boîte e-mail connue des caisses vous délivrant des prestations sociales (CAF, CROUS ou MSA) pour trouver votre pass Sport.
   - Consulter la <a
     target="_blank" title="FAQ - Nouvelle fenêtre"
     rel="noopener"
-    href="https://pass.sports.gouv.fr/v2/une-question">Foire aux Questions du pass'Sport</a>.
+    href="https://pass.sports.gouv.fr/v2/une-question">Foire aux Questions du pass’Sport</a>.
 link: https://pass.sports.gouv.fr
 instructions: https://pass.sports.gouv.fr/obtenir-mon-code/
 prefix: le
