Ajoute le RME de la ville de Petit Couronne.

--- a/data/benefits/javascript/grande_synthe_revenu_minimum_etudiant.yml
+++ b/data/benefits/javascript/grande_synthe_revenu_minimum_etudiant.yml
@@ -24,6 +24,6 @@ link: https://www.ville-grande-synthe.fr/mon-quotidien/centre-communal-daction-s
 form: https://www.ville-grande-synthe.fr/app/uploads/2024/07/Formulaire-20242025.pdf
 type: float
 unit: €
-periodicite: ponctuelle
+periodicite: annuelle
 legend: en moyenne
 montant: 957
