Met à jour le lien des abonnements solidaires aux transports de la métropole de Brest.

--- a/data/benefits/openfisca/brest_metropole_transport.yml
+++ b/data/benefits/openfisca/brest_metropole_transport.yml
@@ -4,8 +4,8 @@ description: >
   Les familles aux ressources modestes bénéficient de forfaits mensuels à tarif réduit pour les transports : les forfaits Tempo, Tango et Rythmo. Tous les membres du foyer peuvent en bénéficier.
 conditions:
   - Présenter un <a target="_blank" rel="noopener" title="justificatif de votre quotient familial - Nouvelle fenêtre" href="http://www.caf.fr/allocataires/vies-de-famille/changement-de-situation/changement-familial/le-quotient-familial-c-est-quoi">justificatif de votre quotient familial</a> délivré par votre Caf.
-link: https://www.bibus.fr/fr/titres-tarifs/titres/forfait-solidaire-mensuel-tempo
-instructions: https://www.bibus.fr/fr/titres-tarifs/titres/forfait-solidaire-mensuel-tempo
+link: https://www.bibus.fr/tarifs/tickets-et-abonnements#taxonomy-term-40
+instructions: https://www.bibus.fr/tarifs/tickets-et-abonnements#taxonomy-term-40
 prefix: la
 floorAt: 0.01
 type: float
