Met à jour les liens des aides de l'Eure-et-Loire pour les personnes en perte d'autonomie.

--- a/data/benefits/openfisca/eure_et_loir_eligibilite_aide_menagere_personne_handicap.yml
+++ b/data/benefits/openfisca/eure_et_loir_eligibilite_aide_menagere_personne_handicap.yml
@@ -8,7 +8,7 @@ conditions:
   - Ne pas déjà bénéficier de l’Allocation compensatrice pour tierce personne
     (ACTP), la Majoration Tierce Personne (MTP versée par la CPAM) ou encore des
     prestations d’aide-ménagère servies par les caisses de retraite.
-link: https://eurelien.fr/guide/autonomie
+link: https://eurelien.fr/mon-quotidien/handicap/
 prefix: l’
 type: bool
 floorAt: 10
