--- a/data/benefits/openfisca/eure_et_loir_eligibilite_ash_personne_handicap.yml
+++ b/data/benefits/openfisca/eure_et_loir_eligibilite_ash_personne_handicap.yml
@@ -9,7 +9,7 @@ conditions:
   - Contribuer aux frais de séjour dans des conditions définies
     dans le cadre du règlement départemental d’aide sociale.
   - Faire évaluer votre besoin par la Maison départementale de l’autonomie (MDA).
-link: https://www.eurelien.fr/guide/autonomie
+link: https://eurelien.fr/mon-quotidien/handicap/
 prefix: l’
 type: bool
 floorAt: 10
