--- a/data/benefits/openfisca/eure_et_loir_eligibilite_cmi_invalidite.yml
+++ b/data/benefits/openfisca/eure_et_loir_eligibilite_cmi_invalidite.yml
@@ -5,7 +5,7 @@ description: >
   lieux publics, les salles d’attente et les transports en commun, de bénéficier
   d’avantages fiscaux et de réductions tarifaires.
 conditions:
-link: https://www.eurelien.fr/guide/autonomie
+link: https://eurelien.fr/mon-quotidien/handicap/
 prefix: la
 type: bool
 floorAt: 10
