--- a/data/institutions/ville_petit_couronne.yml
+++ b/data/institutions/ville_petit_couronne.yml
@@ -1,4 +1,4 @@
-name: Ville de Petit Couronne
+name: Ville de Petit-Couronne
 imgSrc: img/institutions/logo_ville_petit_couronne.png
 type: commune
 code_insee: "76497"
